--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "style-loader": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://priyarajak.github.io/serene-essence-frontend",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -44,6 +45,5 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
-  },
-  "homepage": "https://priyarajak.github.io/serene-essence-frontend"
+  }
 }
